# 0.00.123 (57085) Sep 30, 2011
Added new "Sugar and Salt Solutions: Basics" sim for temporary use in Fall 2011 wet lab at CU
Added new "Sugar and Salt Solutions: Macroscopic" sim for temporary use in Fall 2011 wet lab at CU
# 0.00.122 (57027) Sep 29, 2011
Trial version for testing
# 0.00.121 (57015) Sep 28, 2011
# 0.00.120 (57013) Sep 28, 2011
# 0.00.119 (56910) Sep 23, 2011
Added teacher menu with projector option, see #3087
# 0.00.118 (56838) Sep 22, 2011
Micro tab: Renamed "show in periodic table" to "periodic table"
Water tab: Removed "sugar partial charges" button
# 0.00.117 (56832) Sep 22, 2011
Water tab: Increased the bucket label font
Water tab: Made the yellow dashed lines thicker
# 0.00.116 (56800) Sep 21, 2011
# 0.00.115 (56774) Sep 21, 2011
Water tab: Changed bucket color from "gray" to "medium light gray"
Water tab: Made "Show" control panel have a white background instead of light gray
# 0.00.114 (56757) Sep 20, 2011
Micro tab: Moved periodic table dialog to the left side of the window and underneath the solute control
# 0.00.113 (56748) Sep 20, 2011
Water tab: Made the sodium and chloride labels 50% bigger
Water tab: Made the buckets gray
Micro tab: Made the periodic table button yellow like the 3D sugar button
Micro tab: Moved the periodic table button into the solute box
Micro tab: Show the periodic table dialog at the bottom right so it doesn't obscure the "solute" control panel, and still allows the user to a large fraction of the beaker
# 0.00.112 (56714) Sep 19, 2011
Micro tab: Change periodic table colors to be more protanope-friendly
Micro tab: Change periodic table metal color to be more colorblind friendly
Changed reds to be more colorblind friendly
Macro tab: Switched red conductivity probe color to be more colorblind friendly
# 0.00.111 (56652) Sep 19, 2011
Water tab: Fixed: Sugar partial charges checkbox does not reset
# 0.00.110 (56649) Sep 18, 2011
Water tab: Added partial charge display for sucrose charges