@@ -2,8 +2,8 @@
 sugar-and-salt-solutions.name=Sugar and Salt Solutions
 
 #No need to translate this one, it is just for a fall 2011 version used at CU
-sugar-and-salt-solutions-macroscopic.name=Sugar and Salt Solutions: Macroscopic
-sugar-and-salt-solutions-basics.name=Sugar and Salt Solutions: Basics
+sugar-and-salt-solutions-macro.name=Sugar and Salt Solutions: Macro
+sugar-and-salt-solutions-micro.name=Sugar and Salt Solutions: Micro
 
 solute=Solute
 salt=Salt
