@@ -5,7 +5,7 @@ project.depends.source=src
 #Builds with source version of jbox2d
 project.depends.lib=piccolo-phet : jbox2d : chemistry : jmol-phet
 project.flavor.sugar-and-salt-solutions.mainclass=edu.colorado.phet.sugarandsaltsolutions.SugarAndSaltSolutionsApplication
-project.flavor.sugar-and-salt-solutions-macroscopic.mainclass=edu.colorado.phet.sugarandsaltsolutions.wetlab.SugarAndSaltSolutionsMacroscopicApplication
-project.flavor.sugar-and-salt-solutions-basics.mainclass=edu.colorado.phet.sugarandsaltsolutions.wetlab.SugarAndSaltSolutionsBasicsApplication
+project.flavor.sugar-and-salt-solutions-macro.mainclass=edu.colorado.phet.sugarandsaltsolutions.wetlab.SugarAndSaltSolutionsMacroApplication
+project.flavor.sugar-and-salt-solutions-micro.mainclass=edu.colorado.phet.sugarandsaltsolutions.wetlab.SugarAndSaltSolutionsMicroApplication
 
 generateResourceFile=true
